--- a/part2/phonebook/index.html
+++ b/part2/phonebook/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" type="image/x-icon" href="../../mainLogo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="shortcut icon" type="image/x-icon" href="../../mainLogo.ico" />
-    <title>Course Info</title>
+    <title>Phonebook</title>
   </head>
   <body>
     <div id="root"></div>
